[package]
name = "pathmarks"
version = "0.1.0"
edition = "2024"
description = "Simple path bookmarks for your shell"
license = "MIT"
repository = "https://github.com/sofusa/pathmarks"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6"
nucleo-picker = "0.11"
thiserror = "2"
